--- a/view/index.html
+++ b/view/index.html
@@ -53,7 +53,7 @@
     	<div class="card">
         	<div class="card-body">
             	<div class="card-text">
-  					<h1>Class Togle</h1>
+  					<h1>Class Toggle</h1>
   					<p>Toggle the "class" property of a button by pressing it</p>
  					<br>
 					<button id="b01" class="animated fadeInRight btn tc-blue">Blue</button><br>
